@@ -41,9 +41,9 @@ import org.elasticsearch.common.settings.SecureString;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.common.util.concurrent.ThreadContext;
-import org.elasticsearch.common.xcontent.XContentBuilder;
-import org.elasticsearch.common.xcontent.XContentFactory;
-import org.elasticsearch.common.xcontent.XContentType;
+import org.elasticsearch.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.XContentFactory;
+import org.elasticsearch.xcontent.XContentType;
 import org.elasticsearch.test.rest.ESRestTestCase;
 import org.elasticsearch.xpack.core.common.socket.SocketAccess;
 import org.elasticsearch.xpack.core.security.authc.support.UsernamePasswordToken;
@@ -60,7 +60,6 @@ import java.io.InputStream;
 import java.net.URI;
 import java.nio.file.Path;
 import java.security.SecureRandom;
-import java.security.cert.Certificate;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -462,8 +461,7 @@ public class SamlAuthenticationIT extends ESRestTestCase {
 
     private SSLContext getClientSslContext() throws Exception {
         final Path pem = getDataPath("/idp-browser.pem");
-        final Certificate[] certificates = CertParsingUtils.readCertificates(Collections.singletonList(pem));
-        final X509ExtendedTrustManager trustManager = CertParsingUtils.trustManager(certificates);
+        final X509ExtendedTrustManager trustManager = CertParsingUtils.getTrustManagerFromPEM(List.of(pem));
         SSLContext context = SSLContext.getInstance("TLS");
         context.init(new KeyManager[0], new TrustManager[] { trustManager }, new SecureRandom());
         return context;
